# Portifolio-de-Dados

./: README.md
Construindo um Data Lake/: .gitignore  README.md  mkdocs.yml  pyproject.toml
Construindo um Data Lake/Ingest/: ingest.py
Construindo um Data Lake/config/: config.cfg
Construindo um Data Lake/docs/: index.md
